--- a/api-reference/intro/introduction.mdx
+++ b/api-reference/intro/introduction.mdx
@@ -18,11 +18,11 @@ Best of all, since the ReDem Application runs entirely on this API, everything y
 The ReDem API supports two main integration use cases, allowing you to choose the approach that best fits your workflow:
 
 <CardGroup cols={2}>
-  <Card title="For Researchers" icon="telescope" href="/api-reference/intro/for-researchers">
+  <Card title="Synchronous Response" icon="arrow-up-arrow-down" href="/api-reference/intro/for-researchers">
     Get instant feedback on survey responses and data quality scores directly in your application.
   </Card>
 
-  <Card title="For Survey Tools" icon="screwdriver-wrench" href="/api-reference/intro/for-survey-tools">
+  <Card title="Asynchronous Response" icon="arrows-rotate" href="/api-reference/intro/for-survey-tools">
     Automatically synchronize data quality scores with your systems at regular intervals for continuous analysis.
   </Card>
 </CardGroup>
