--- a/api-reference/intro/synchronous-response.mdx
+++ b/api-reference/intro/synchronous-response.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'For Researchers'
+title: 'Synchronous Response'
 description: 'Learn how to use ReDem as a researcher'
-icon: "telescope"
+icon: "arrow-up-arrow-down"
 iconType: "regular"
 ---
 
-<Info>To integrate ReDem with your survey tool, you'll need a ReDem account. <br /> Don’t have an account yet? Get started by [setting up your account](/account-setup).</Info>
+<Info>To integrate with ReDem, you must have a ReDem account. <br /> Don’t have an account yet? Get started by [setting up your account](/account-setup).</Info>
 
 <Steps titleSize="h3">
   <Step title="Login and create an API key">
@@ -16,7 +16,7 @@ iconType: "regular"
   <Step title="Prepare your request data">
     Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.
 
-    <p>As a researcher, we **recommend adopting an synchronous response approach**. Therefore, keep the `synchronousResponse` field set to `true`. It allows you to get a response from ReDem in real time.</p>
+    <p>In a synchronous response approach, it is recommended to keep the `synchronousResponse` field set to `true`. It allows you to get a response from ReDem in real time.</p>
 
     <p> Use your survey tool to scrape data and format the request data as follows:</p>
 
