Clarify requirements for synchronous and asynchronous response fields in API documentation

--- a/api-reference/intro/asynchronous-response.mdx
+++ b/api-reference/intro/asynchronous-response.mdx
@@ -15,8 +15,8 @@ iconType: "regular"
 
   <Step title="Prepare your request data">
     Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.
-
-    <p>In an asynchronous response approach, it is recommended to keep the `synchronousResponse` field set to `false`. This allows you to continue engaging with your respondents without waiting for a response from ReDem..</p>
+  
+    <p>For an asynchronous response approach, the `synchronousResponse` field **must always be set to `false`**. This allows you to continue engaging with your respondents without waiting for a response from ReDem.</p>
 
     ```javascript Example request body
     {
