--- a/api-reference/intro/synchronous-response.mdx
+++ b/api-reference/intro/synchronous-response.mdx
@@ -16,7 +16,7 @@ iconType: "regular"
   <Step title="Prepare your request data">
     Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.
 
-    <p>In a synchronous response approach, it is recommended to keep the `synchronousResponse` field set to `true`. It allows you to get a response from ReDem in real time.</p>
+    <p>For a synchronous response approach, the `synchronousResponse` field **must always be set to `true`**. This ensures you receive responses from ReDem in real time.</p>
 
     <p> Use your survey tool to scrape data and format the request data as follows:</p>
 
