Update API specifications and configuration for improved clarity and consistency

--- a/api-reference/api-specifications/response-structure.mdx
+++ b/api-reference/api-specifications/response-structure.mdx
@@ -41,7 +41,7 @@ The error response of the ReDem API is returned when a request fails due to vari
 ```json Sample error response for "Add Respondent"
 {
     "success": false,
-    "message": "Validation failed",
+    "message": "Validation Error",
     "errors": {
         "0": "\"surveyName\" is required",
         "1": "\"dataPoints[0].dataPointId\" is required"
