Change Get All Respondents endpoint from GET to POST and update request/response structure

--- a/api-reference/endpoint/getAllRespondents.mdx
+++ b/api-reference/endpoint/getAllRespondents.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Get All Respondents'
-openapi: 'GET /respondent/getAllRespondents/{surveyName}'
+openapi: 'POST /getAllRespondents'
 ---
