Rename Estimate Respondent endpoint to Credit Calculation and change HTTP method to POST; update request/response structure and documentation for clarity.

--- a/api-reference/endpoint/creditCalculation.mdx
+++ b/api-reference/endpoint/creditCalculation.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Estimate Respondent Credits'
-openapi: 'GET /respondent/estimation'
+title: 'Credit Calculation'
+openapi: 'POST /creditCalculation'
 ---
 
 In case if you want to estimate the number of credits required to add a respondent, you can use this endpoint.
