--- a/api-reference/endpoint/stopSurvey.mdx
+++ b/api-reference/endpoint/stopSurvey.mdx
@@ -2,3 +2,5 @@
 title: 'Stop Survey'
 openapi: 'POST /stopSurvey'
 --- 
+
+A **stopped survey no longer accepts new respondents**, preventing further additions.
