Documentation edits made through Mintlify web editor

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -55,9 +55,8 @@ You can customize the following key quality checks by setting thresholds that de
   - **Duplicate Answer**
   - **Nonsense**
   - **Wrong Language**
-  - **Copy-Paste Answer**
   - **Wrong Topic**
-  - **Fake Answer**
+  - **AI Generated Answer**
 
 
 Here’s an example of a cleaning settings object that can be used to customize the cleaning process via the API:
