Update credit calculation details in documentation; adjust Open-Ended-Score and add Behaviour-Analysis-Score.

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -33,7 +33,7 @@ The following list provides a clear overview of how credits are calculated based
     <tr>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>Open-Ended-Score (OES)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>3 (for the first question)</td>
-      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.5 (for each additional question)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.25 (for each additional question)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>-</td>
     </tr>
 
@@ -56,6 +56,13 @@ The following list provides a clear overview of how credits are calculated based
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.05 per item</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>-</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>2</td>
+    </tr>
+
+    <tr>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>Behaviour-Analysis-Score (BAS)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>2 (for the first data point)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.25 (for each additional data point)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>-</td>
     </tr>
   </tbody>
 </table>
