Fix minor grammatical issues in Behavior Analysis Score documentation for clarity

--- a/quality-checks/behavior-analysis-score.mdx
+++ b/quality-checks/behavior-analysis-score.mdx
@@ -23,7 +23,7 @@ Involves progressive character-by-character input with natural pauses between wo
 Still classified as natural typing but may exhibit less consistent patterns while maintaining human-like variability in timing.
 
 **Auto-Complete Enhanced Typing** <br/>
-Combines manual input with auto-complete suggestions, resulting in distinct patterns of rapid text insertion. It is still considered natural if it falls within acceptable
+Combines manual input with auto-complete suggestions, resulting in distinct patterns of rapid text insertion. If it falls within acceptable human like typing patterns.
 
 **Copy-Paste Typing** <br/>
 Involves directly inserting text without keystroke activity, bypassing natural typing patterns. This behavior is flagged as non-human input, as it lacks the expected variations in speed, rhythm, and pauses associated with manual typing.  
@@ -40,7 +40,7 @@ The system uses **AI and custom algorithms** to classify typing behavior into di
 - **Copy-paste**: Detects when content is primarily copied and pasted.
 
 ### Scoring system
-The **Behavioral Analysis Score (BAS)** uses a structured scoring system to evaluate the quality of typing behavior. The scoring system is defined as follows:  
+The **Behavior Analysis Score (BAS)** uses a structured scoring system to evaluate the quality of typing behavior. The scoring system is defined as follows:  
 
 - The **BAS score ranges from 0 to 100**  
 - **Higher scores `(>50)`** indicate more **natural** typing patterns.  
