--- a/api-reference/others/change-log.mdx
+++ b/api-reference/others/change-log.mdx
@@ -11,9 +11,9 @@ iconType: "regular"
 
   <code style={{ color: "red" }}>POST /respondent/add</code> → <code style={{ color: "green" }}>POST /addRespondent</code> <br/>
   - The `interactionData` field within `dataPoints` → `qualityCheck: BAS` has been modified to support additional interaction types. Now, it has been expanded to include both `KEYSTROKE` and `COPYANDPASTE` interactions, enhancing tracking capabilities.
-  - Enhanced the **request body cleaning settings** by allowing **activate/deactivate** options for each quality check and enhanced **cleaning settings** by introducing **Behavioral Analytics Score (BAS)** along with its categories.
+  - Enhanced the **request body cleaning settings** by allowing **activate/deactivate** options for each quality check and enhanced **cleaning settings** by introducing **Behavior Analysis Score (BAS)** along with its categories.
   - Renamed the **Fake Answer** category in **Open-Ended Score (OES)** to **AI-Generated Answer**.
-  - We have **enhanced** the response structure by adding a field to retrieve **Behavioral Analytics Score (BAS)** results.
+  - We have **enhanced** the response structure by adding a field to retrieve **Behavior Analysis Score (BAS)** results.
 
   <code style={{ color: "red" }}>GET /respondent/getRespondent</code> → <code style={{ color: "green" }}>POST /getRespondent</code> <br/>
   - Previously with `GET` request we pass the `surveyName` and `respondentId` as a path parameters. Now we pass it in the request body. 
@@ -31,7 +31,7 @@ iconType: "regular"
 
   ## Enhanced the quality checks by introducing Behavior Analysis Score (BAS)
   We have enhanced the quality checks by introducing **Behavior Analysis Score (BAS)** to evaluate the respondent's behavior and provide a score and categories based on the behavior.
-  - Removed the **Copy-Paste** category from **Open-Ended Score (OES)** and incorporated it under **Behavioral Analytics Score (BAS)**.
+  - Removed the **Copy-Paste** category from **Open-Ended Score (OES)** and incorporated it under **Behavior Analysis Score (BAS)**.
 
   ## Streamlined the API response in error cases
   When a request fails due to invalid input or other errors, the all API returns a **400 Bad Request** status code. The response includes a descriptive `message` explaining the issue and an `error` object containing additional details to aid in diagnosing and resolving the problem.
