--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -24,18 +24,22 @@ Built on ReDem’s expertise, our default cleaning settings effectively address 
 **Overview of Recommended Settings:**
 Predefined thresholds for R-Score, OES (including Open-Ended Response Categories), CHS, GQS, and TS are applied as recommend settings. An interview is flagged for exclusion if **any** of the following criteria are met:
 
-- **ReDem Score (R-Score)**: Respondents with an R-Score below 60 are excluded.
+* **ReDem Score (R-Score)**: Respondents with an R-Score below 60 are excluded.
 
-- **Open-Ended Score (OES) & Response Categories:**: 
-Respondents with an OES below 40 are excluded if they provide at least two open-ended responses.
+* **Open-Ended Score (OES) & Response Categories:**
+  Respondents with an OES below 40 are excluded if they provide at least two open-ended responses.
 
-Respondents flagged in at least two open-ended responses for wrong language, bad language, fake answer/copy paste, nonsense or wrong topic are excluded.
 
-- **Coherence Score (CHS)**: Respondents with a CHS below 30 are excluded.
 
-- **Grid-Question Score (GQS)**: Respondents with a GQS below 20 and at least two valid grid-question responses are excluded.
 
-- **Time Score (TS)**: Respondents with a TS below 20 are excluded.
+
+  Respondents flagged in at least two open-ended responses for wrong language, bad language, fake answer/copy paste, nonsense or wrong topic are excluded.
+
+* **Coherence Score (CHS)**: Respondents with a CHS below 30 are excluded.
+
+* **Grid-Question Score (GQS)**: Respondents with a GQS below 20 and at least two valid grid-question responses are excluded.
+
+* **Time Score (TS)**: Respondents with a TS below 20 are excluded.
 
 ### Using Custom Cleaning Settings
 
@@ -43,30 +47,62 @@ To customize the cleaning process, you can define specific thresholds for each q
 
 You can customize the following key quality checks by setting thresholds that determine when respondents should be flagged or excluded:
 
-- **ReDem Score**: <br/> Set a threshold for the overall ReDem Score to filter out low-quality responses.
+* **ReDem Score**:&#x20;
 
-- **Open-Ended Score (OES)**: <br/> Define a threshold for the overall Open-Ended Score and set a minimum number of data points to filter out low-quality responses.
+  <br />
 
-- **Time Score (TS)**: <br/> Set a threshold for the Time Score and number of data points to filter out low-quality responses
+  &#x20;Set a threshold for the overall ReDem Score to filter out low-quality responses.
 
-- **Grid-Question Score (GQS)**: <br/> Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
+* **Open-Ended Score (OES)**:&#x20;
 
-- **Coherence Score (CHS)**: <br/> Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
+  <br />
 
-- **Open-Ended Response Categories**: <br/> Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
+  &#x20;Define a threshold for the overall Open-Ended Score and set a minimum number of data points to filter out low-quality responses.
 
-  - **Generic Answer**
-  - **Bad Language**
-  - **No Information**
-  - **Duplicate Respondent**
-  - **Duplicate Answer**
-  - **Nonsense**
-  - **Wrong Language**
-  - **Wrong Topic**
-  - **AI Generated Answer**
+* **Time Score (TS)**:&#x20;
 
+  <br />
+
+  &#x20;Set a threshold for the Time Score and number of data points to filter out low-quality responses
+
+* **Grid-Question Score (GQS)**:&#x20;
+
+  <br />
+
+  &#x20;Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
+
+* **Coherence Score (CHS)**:&#x20;
+
+  <br />
+
+  &#x20;Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
+
+* **Open-Ended Response Categories**:&#x20;
+
+  <br />
+
+  &#x20;Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
+
+  * **Generic Answer**
+
+  * **Bad Language**
+
+  * **No Information**
+
+  * **Duplicate Respondent**
+
+  * **Duplicate Answer**
+
+  * **Nonsense**
+
+  * **Wrong Language**
+
+  * **Wrong Topic**
+
+  * **AI Generated Answer**
 
 Here’s an example of a cleaning settings object that can be used to customize the cleaning process via the API:
+
 ```javascript
   "redemScore": 60,
   "OES": {
@@ -83,21 +119,20 @@ Here’s an example of a cleaning settings object that can be used to customize 
   "TS": {"score": 20}
 ```
 
-
 ## What is the outcome of the cleaning process?
 
 The cleaning process classifies each response as either **Included** or **Excluded**, with clear reasons provided for exclusions. This ensures transparency and highlights areas that may require further attention or adjustments.
 
 **Reasons for Exclusion** (only one needs to be true):
 
-- **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
+* **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
 
-- **Open-Ended Score (OES) Threshold**: Respondent’s OES is below the default (30) or a custom threshold.
+* **Open-Ended Score (OES) Threshold**: Respondent’s OES is below the default (30) or a custom threshold.
 
-- **Time Score (TS) Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
+* **Time Score (TS) Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
 
-- **Grid-Question Score (GQS) Threshold**: Respondent’s GQS is below a custom threshold.
+* **Grid-Question Score (GQS) Threshold**: Respondent’s GQS is below a custom threshold.
 
-- **Coherence Score (CHS) Threshold**: Respondent’s CHS is below a custom threshold.
+* **Coherence Score (CHS) Threshold**: Respondent’s CHS is below a custom threshold.
 
 This structured reasoning provides clear insights into exclusions, empowering users to refine their criteria based on the analysis.
