Documentation edits made through Mintlify web editor

--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -30,7 +30,7 @@ At the core of ReDem lies a 360-degree approach, enabling us to analyze intervie
     The Grid-Question Score (GQS) uses AI to assess respondents based on their response behavior in one or more matrix questions.
   </Card>
 
-  <Card title="Behavior Analysis Score" icon="keyboard" href="/quality-checks/behavior-analysis-score">
+  <Card title="Behavioral Analytics Score" icon="keyboard" href="/quality-checks/behavior-analysis-score">
     The Behavioral Analytics Score (BAS) is a quality score designed to evaluate user typing patterns. It analyzes various aspects of typing behavior to distinguish between natural human typing and potentially automated or artificial inputs.
   </Card>
 </CardGroup>
