Documentation edits made through Mintlify web editor

--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -11,7 +11,7 @@ At the core of ReDem lies a 360-degree approach, enabling us to analyze intervie
 
 <img classname="hidden dark:block" src="/images/Quality-Checks.png" />
 
-### The four dimensions of the ReDem Score:
+### The five dimensions of the ReDem Score:
 
 <CardGroup cols={2}>
   <Card title="Open-Ended Score" icon="messages" href="/quality-checks/open-ended-score">
