Documentation edits made through Mintlify web editor

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -47,41 +47,23 @@ To customize the cleaning process, you can define specific thresholds for each q
 
 You can customize the following key quality checks by setting thresholds that determine when respondents should be flagged or excluded:
 
-* **ReDem Score**:&#x20;
+* **ReDem Score**: <br/>
+Set a threshold for the overall ReDem Score to filter out low-quality responses.
 
-  <br />
+* **Open-Ended Score (OES)**: <br/>
+Define a threshold for the overall Open-Ended Score and set a minimum number of data points to filter out low-quality responses.
 
-  &#x20;Set a threshold for the overall ReDem Score to filter out low-quality responses.
+* **Time Score (TS)**: <br/>
+Set a threshold for the Time Score and number of data points to filter out low-quality responses
 
-* **Open-Ended Score (OES)**:&#x20;
+* **Grid-Question Score (GQS)**:<br/>
+Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
 
-  <br />
+* **Coherence Score (CHS)**:<br/>
+Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
 
-  &#x20;Define a threshold for the overall Open-Ended Score and set a minimum number of data points to filter out low-quality responses.
-
-* **Time Score (TS)**:&#x20;
-
-  <br />
-
-  &#x20;Set a threshold for the Time Score and number of data points to filter out low-quality responses
-
-* **Grid-Question Score (GQS)**:&#x20;
-
-  <br />
-
-  &#x20;Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
-
-* **Coherence Score (CHS)**:&#x20;
-
-  <br />
-
-  &#x20;Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
-
-* **Open-Ended Response Categories**:&#x20;
-
-  <br />
-
-  &#x20;Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
+* **Open-Ended Response Categories**:<br/>
+Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
 
   * **Generic Answer**
 
