Documentation edits made through Mintlify web editor

--- a/api-reference/others/change-log.mdx
+++ b/api-reference/others/change-log.mdx
@@ -8,7 +8,7 @@ iconType: "regular"
 <Update label="2025-03-11" description="Unversioned changes">
   ## API endpoint updates
 
-  The <code style={{ color: "green" }}> POST /respondent/add </code> endpoint has been updated to rename parameters in the cleaning settings, changing from **camelCase to UPPERCASE_UNDERSCORE** formatting.
+  The <code style={{ color: "green" }}> POST /addRespondent </code> endpoint has been updated to rename parameters in the cleaning settings, changing from **camelCase to UPPERCASE_UNDERSCORE** formatting.
 
   The following is an example of the new cleaning settings object:
   ```javascript
