Update interaction type enum to use UPPERCASE_UNDERSCORE format in API specifications

--- a/api-reference/others/behavior-tracking.mdx
+++ b/api-reference/others/behavior-tracking.mdx
@@ -21,7 +21,7 @@ iconType: "regular"
         // Constants
         const INTERACTION_TYPES = {
             KEYSTROKE: 'KEYSTROKE',
-            COPYPASTE: 'COPYANDPASTE'
+            COPYPASTE: 'COPY_AND_PASTE'
         };
       
         // Question ID - This would typically come from your survey tool, you need to edit this
