--- a/api-reference/others/change-log.mdx
+++ b/api-reference/others/change-log.mdx
@@ -46,7 +46,7 @@ iconType: "regular"
 
   <code style={{ color: "red" }}> POST /respondent/add </code> → <code style={{ color: "green" }}> POST /addRespondent </code> <br />
 
-  * The `interactionData` field within `dataPoints` → `qualityCheck: BAS` has been modified to support additional interaction types. Now, it has been expanded to include both `KEYSTROKE` and `COPYANDPASTE` interactions, enhancing tracking capabilities.
+  * The `interactionData` field within `dataPoints` → `qualityCheck: BAS` has been modified to support additional interaction types. Now, it has been expanded to include both `KEYSTROKE` and `COPY_AND_PASTE` interactions, enhancing tracking capabilities.
 
   * Enhanced the **request body cleaning settings** by allowing **activate/deactivate** options for each quality check and enhanced **cleaning settings** by introducing **Behavioral Analytics Score (BAS)** along with its categories.
 
