--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -117,14 +117,80 @@ The cleaning process classifies each response as either **Included** or **Exclud
 
 **Reasons for Exclusion** (only one needs to be true):
 
-* **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
-
-* **Open-Ended Score (OES) Threshold**: Respondent’s OES is below the default (30) or a custom threshold.
-
-* **Time Score (TS) Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
-
-* **Grid-Question Score (GQS) Threshold**: Respondent’s GQS is below a custom threshold.
-
-* **Coherence Score (CHS) Threshold**: Respondent’s CHS is below a custom threshold.
+- **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
+- **Open-Ended Score Threshold**: Respondent’s OES is below the default (40) or a custom threshold.
+- **Open Ended Category**: Respondet is having above define category threshold.
+- **Time Score Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
+- **Grid-Question Score Threshold**: Respondent’s GQS is below the default (20) or a custom threshold.
+- **Coherence Score Threshold**: Respondent’s CHS is below the default (30) or a custom threshold.
+- **Behavioral Analytics Score Threshold**: Respondent’s BAS is below a custom threshold.
+- **Behavioral Analytics Category**: Respondet is having above define category threshold.
 
 This structured reasoning provides clear insights into exclusions, empowering users to refine their criteria based on the analysis.
+
+
+## Example of How the Cleaning Process Works
+
+As an example, let's consider the cleaning settings applied to a specific respondent:
+```javascript
+  "redemScore": 60,
+  "OES": {
+    "activate": true,
+    "score": 60,
+    "minDataPoints":2,
+    "categories": {
+      "GENERIC_ANSWER": {"activate": true, "minDataPoints":2},
+      "NO_INFORMATION": {"activate": true, "minDataPoints":2},
+      "BAD_LANGUAGE": {"activate": false, "minDataPoints":2},
+      "NONSENSE": {"activate": false, "minDataPoints":2},
+      "DUPLICATE_ANSWER": {"activate": false, "minDataPoints":2},
+      "DUPLICATE_RESPONDENT": {"activate": false, "minDataPoints":2},
+      "WRONG_TOPIC": {"activate": false, "minDataPoints":2},
+      "WRONG_LANGUAGE": {"activate": false, "minDataPoints":2},
+      "AI_GENERATED_ANSWER": {"activate": true, "minDataPoints":1}
+    }
+  }
+```
+
+To better understand how cleaning settings are applied, let's consider different cases of respondent data and determine whether they should be excluded and what should be the reason for exclusion.
+
+<AccordionGroup>
+  <Accordion title="Respondent with Low ReDem Score and Low OES Score">
+    **Input:** <br/>
+    The respondent has a **ReDem Score of 50** and an **OES Score of 60**. They have provided **4 valid answers for OES data points**, **3 of which are categorized as `GENERIC_ANSWER`**.
+
+    **Output:** <br/>
+    The respondent is **excluded** because their **ReDem Score falls below the threshold**. Additionally, their **OES Score is below the defined threshold**, and they have provided **more than 2 valid answers for OES data points**, with **3 categorized as `GENERIC_ANSWER`**, exceeding the threshold set in the cleaning settings. 
+  </Accordion>
+
+  <Accordion title="Respondent with Low OES Score">
+    **Input:** <br/>
+    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided **2 valid answers for OES data points**, with **1 categorized as a `GENERIC_ANSWER`**.
+
+    **Output:** <br/>
+    The respondent is **excluded** because their **Open-Ended Score is below the threshold** and they have provided **2 valid answers for OES data points**.
+  </Accordion>
+
+  <Accordion title="Respondent with more `GENERIC_ANSWERS` than the threshold">
+    **Input:** <br/>
+    The respondent has a **ReDem Score of 70** and an **OES Score of 50**. They have provided **4 valid answers for OES data points**, with **3 categorized as `GENERIC_ANSWER`**.
+
+    **Output:** <br/>
+    The respondent is **excluded** despite their **ReDem Score and Open-Ended Score being above the threshold**, because **more than 2 of their answers are categorized as `GENERIC_ANSWER`**, exceeding the threshold defined in the cleaning settings.
+  </Accordion>
+
+  <Accordion title="Respondent who should not be excluded">
+    **Input:** <br/>
+    The respondent has a **ReDem Score of 70** and an **OES Score of 30**. They have provided only **one valid OES data point**, which is categorized as a **`GENERIC_ANSWER`**.
+
+    **Output:** <br/>
+    The respondent should **not be excluded** because they **do not meet the minimum valid OES data points requirement for cleaning**, even though their **OES Score is below the threshold**.
+  </Accordion>
+</AccordionGroup>
+
+
+
+
+
+
+
