--- a/quality-checks/coherence-score.mdx
+++ b/quality-checks/coherence-score.mdx
@@ -13,13 +13,13 @@ Additionally, the Coherence Score minimizes false positives by avoiding the disq
 
 The Coherence Score evaluates the entire interview and assigns a score ranging from 0 to 100. Alongside the score, the system provides a detailed explanation of the rating and a list of incoherent questions. The explanation summarizes the overall quality of the interview, while the list highlights specific questions where the respondent's answers were inconsistent or contradictory, offering valuable insights into areas of potential concern.
 
-## Use of GPT-4 for Coherence-Score
+## Use of GPT for Coherence-Score
 
-For the Coherence Score, ReDem uses GPT-4 hosted on Microsoft Azure, with a deployment in the EU region that is fully GDPR-compliant.
+For the Coherence Score, ReDem uses GPT hosted on Microsoft Azure, with a deployment in the EU region that is fully GDPR-compliant.
 
 ### Individual Responses & Anonymity
 
-Each interview is sent to the GPT-4 deployment using a fully anonymized ID. Only the individual interview is shared per API query, ensuring that full survey datasets are never accessible to Microsoft Azure.
+Each interview is sent to the GPT deployment using a fully anonymized ID. Only the individual interview is shared per API query, ensuring that full survey datasets are never accessible to Microsoft Azure.
 
 ### Exclusive Interaction with Azure
 
