--- a/api-reference/endpoint/stopSurvey.mdx
+++ b/api-reference/endpoint/stopSurvey.mdx
@@ -3,4 +3,4 @@ title: 'Stop Survey'
 openapi: 'POST /stopSurvey'
 --- 
 
-A **stopped survey no longer accepts new respondents**, preventing further additions.
+A **stopped survey no longer accepts new respondents**, preventing any further additions.
