--- a/api-reference/endpoint/creditCalculation.mdx
+++ b/api-reference/endpoint/creditCalculation.mdx
@@ -3,6 +3,6 @@ title: 'Credit Calculation'
 openapi: 'POST /creditCalculation'
 ---
 
-In case if you want to estimate the number of credits required to add a respondent, you can use this endpoint.
+If you need to estimate the number of credits required to add a respondent, you can use this endpoint.
 
-<Note>This endpoint is optional and provided for informational purposes only. It offers an estimate, which may differ from the actual number of credits required.</Note>
+<Note>This endpoint is optional and serves informational purposes only. It provides an estimate of the credits required based on the selected quality scores.</Note>
